--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "devDependencies": {
         "@types/react": "^17.0.38",
         "@types/react-dom": "^17.0.11",
+        "@types/react-router-dom": "^5.3.2",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
@@ -23,5 +24,12 @@
         "sass-loader": "^12.4.0",
         "ts-loader": "^9.2.6",
         "typescript": "^4.5.4"
+    },
+    "dependencies": {
+        "@chakra-ui/react": "^1.7.4",
+        "@emotion/react": "^11.7.1",
+        "@emotion/styled": "^11.6.0",
+        "framer-motion": "^5.6.0",
+        "react-router-dom": "^5.3.0"
     }
 }
