--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "typescript": "^4.5.4"
     },
     "dependencies": {
+        "@chakra-ui/icons": "^1.1.1",
         "@chakra-ui/react": "^1.7.4",
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
